Input 값을 받아 DataFrame으로 만들고 best_model.predict_proba 함수를 적용하여 해당 input값들에 대한 확률값(VIP 될 확률) 출력

--- a/Chapter5_6_ML.ipynb
+++ b/Chapter5_6_ML.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "11JfHY_4kNVbAq40Guefm6VdXhBQUcVMr",
-      "authorship_tag": "ABX9TyM9fGr3+gjwYNd56DTsKBuV",
+      "authorship_tag": "ABX9TyPgx346C9+Ja1PCFxj6g7cs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1308,16 +1308,80 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x.columns"
+      ],
       "metadata": {
-        "id": "mCeK6Zw89YrN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1bvEAOmjD-C9",
+        "outputId": "3708e119-49f0-4bd2-bc0f-351850f4fd57"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['주소-구', '성별', '연령', '배송서비스신청여부', '모바일알람여부'], dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x1 = input('주소를 입력하시오: ')\n",
+        "x2 = input('성별을 입력하시오: ')\n",
+        "x3 = input('연령을 입력하시오: ')\n",
+        "x4 = input('배송서비스신청여부를 입력하시오: ')\n",
+        "x5 = input('모바일알람여부를 입력하시오: ')\n",
+        "\n",
+        "input_x = pd.DataFrame([[x1,x2,x3,x4,x5]], columns = x.columns.tolist())\n",
+        "\n",
+        "best_model.predict_proba(input_x)[:, 1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "USaovDmZEAqV",
+        "outputId": "8a3a972a-c806-4e26-ff93-c2343f17af8d"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "주소를 입력하시오: 수지구\n",
+            "성별을 입력하시오: 여\n",
+            "연령을 입력하시오: 45\n",
+            "배송서비스신청여부를 입력하시오: 미신청\n",
+            "모바일알람여부를 입력하시오: 수신\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.89285554])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ㅇ"
+      ],
       "metadata": {
         "id": "BtrwmIzy9Yow"
       },
